
0.1.3.0004:
- small fix that allows moving, rotating and scaling rigidbody if isDynamic is true but physics simulation is off
- added modifyable gravity, angular damping, low angular velocity factor, friction multiplier, correction factor and minimum penetration factor to settings into physics tab and to scene file
- now displaying center of gravity in rigidbody component
- replaced default model and skybox textures
- can now set global ambient color and intensity in settings inside graphics tab, they are saved to scene file
- renamed settings other tab to game
- overhauled scene file save and load system to be more similar to config file
- scene camera is only accessible in the engine, user needs to create their own camera to see anything in game, this is also saved and loaded as a separate gameobject, can switch between created cameras and scene camera in engine
- save audio play/stop state to gameobject

0.1.3.0005:
- made selected object border thicker so its more visible
- added back shininess slider
- created a new gameobject type for audio component with its own audio icon
- added missing rigidbody component that gets copied and pasted alongside gameobject and its other components
- fixed a crash that occured when adding a light component to a empty gameobject
- fixed an issue that added back light component to empty gameobject if it was removed and the scene was reloaded
- fixed dynamic rigidbody with gravity enabled not moving in game

0.1.3.0006:
- actually added audio gameobject with its own icon for real this time
- added camera gameobject with its own icon
- minor linux compatibility fixes
- limit camera, light and audio components to empty gameobject only, cannot add more than one of those to it
- copy attached audio file to audio object folder
- can play multiple songs at the same time
- no longer importing files in audio folder
- can remove attached audio file from audio object