@@ -346,23 +346,63 @@ namespace Graphics::GUI
 
 			ImGui::Separator();
 
-			ImGui::Text("Render billboards");
+			ImGui::Text("Render borders");
 			ImGui::SameLine();
 			ImGui::SetCursorPosX(ImGui::GetWindowWidth() - 50);
-			bool renderBillboards = GameObjectManager::renderBillboards;
-			if (ImGui::Checkbox("##renderBillboards", &renderBillboards))
+			bool renderBorders = GameObjectManager::renderBorders;
+			if (ImGui::Checkbox("##renderBorders", &renderBorders))
 			{
-				GameObjectManager::renderBillboards = renderBillboards;
+				GameObjectManager::renderBorders = renderBorders;
 				if (!SceneFile::unsavedChanges) Render::SetWindowNameAsUnsaved(true);
 			}
 
-			ImGui::Text("Render light borders");
+			ImGui::Text("Render point light billboards");
 			ImGui::SameLine();
 			ImGui::SetCursorPosX(ImGui::GetWindowWidth() - 50);
-			bool renderLightBorders = GameObjectManager::renderLightBorders;
-			if (ImGui::Checkbox("##renderLightBorders", &renderLightBorders))
+			bool renderPointLightBillboards = GameObjectManager::renderPointLightBillboards;
+			if (ImGui::Checkbox("##renderPointLightBillboards", &renderPointLightBillboards))
 			{
-				GameObjectManager::renderLightBorders = renderLightBorders;
+				GameObjectManager::renderPointLightBillboards = renderPointLightBillboards;
+				if (!SceneFile::unsavedChanges) Render::SetWindowNameAsUnsaved(true);
+			}
+
+			ImGui::Text("Render spotlight billboards");
+			ImGui::SameLine();
+			ImGui::SetCursorPosX(ImGui::GetWindowWidth() - 50);
+			bool renderSpotlightBillboards = GameObjectManager::renderSpotlightBillboards;
+			if (ImGui::Checkbox("##renderSpotlightBillboards", &renderSpotlightBillboards))
+			{
+				GameObjectManager::renderSpotlightBillboards = renderSpotlightBillboards;
+				if (!SceneFile::unsavedChanges) Render::SetWindowNameAsUnsaved(true);
+			}
+
+			ImGui::Text("Render directional light billboard");
+			ImGui::SameLine();
+			ImGui::SetCursorPosX(ImGui::GetWindowWidth() - 50);
+			bool renderDirLightBillboard = GameObjectManager::renderDirLightBillboard;
+			if (ImGui::Checkbox("##renderDirLightBillboard", &renderDirLightBillboard))
+			{
+				GameObjectManager::renderDirLightBillboard = renderDirLightBillboard;
+				if (!SceneFile::unsavedChanges) Render::SetWindowNameAsUnsaved(true);
+			}
+
+			ImGui::Text("Render audio billboards");
+			ImGui::SameLine();
+			ImGui::SetCursorPosX(ImGui::GetWindowWidth() - 50);
+			bool renderAudioObjectBillboards = GameObjectManager::renderAudioObjectBillboards;
+			if (ImGui::Checkbox("##renderAudioObjectBillboards", &renderAudioObjectBillboards))
+			{
+				GameObjectManager::renderAudioObjectBillboards = renderAudioObjectBillboards;
+				if (!SceneFile::unsavedChanges) Render::SetWindowNameAsUnsaved(true);
+			}
+
+			ImGui::Text("Render camera billboards");
+			ImGui::SameLine();
+			ImGui::SetCursorPosX(ImGui::GetWindowWidth() - 50);
+			bool renderCameraObjectBillboards = GameObjectManager::renderCameraObjectBillboards;
+			if (ImGui::Checkbox("##renderCameraObjectBillboards", &renderCameraObjectBillboards))
+			{
+				GameObjectManager::renderCameraObjectBillboards = renderCameraObjectBillboards;
 				if (!SceneFile::unsavedChanges) Render::SetWindowNameAsUnsaved(true);
 			}
 
